Updated Site Content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>Flávio Moreira</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Flávio Moreira</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -58,9 +58,9 @@
                     <li>
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
-                    </li>
+                    <!--<li>-->
+                        <!--<a class="page-scroll" href="#portfolio">Portfolio</a>-->
+                    <!--</li>-->
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
@@ -86,7 +86,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">About me</h2>
                     <hr class="light">
                     <p class="text-faded">I am a frontend web developer with passion for everything HTML, CSS and JavaScript. Always searching for the latest innovations and learning new things. I love the expressiveness that can be achieved through client-side technologies. In the web, the possibilities are endless.Always ready for a new challenge and trying to learn from every experience.</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl">Get Started!</a>
@@ -108,139 +108,138 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <i class="fa fa-4x fa-code wow bounceIn text-primary"></i>
+                        <h3>Javascript</h3>
+                        <p class="text-muted">Javascript is the best script.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <i class="fa fa-4x fa-css3 wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <h3>CSS3</h3>
+                        <p class="text-muted">Styling for the modern web!</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                    <div class="service-box"><i class="fa fa-4x fa-html5 wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <h3>HTML5</h3>
+                        <p class="text-muted">The latest HTML to keep things fresh.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <p class="text-muted">You have to love what you do!</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter">
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
-                                </div>
-                                <div class="project-name">
-                                    Project Name
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
+    <!--<section class="no-padding" id="portfolio">-->
+        <!--<div class="container-fluid">-->
+            <!--<div class="row no-gutter">-->
+                <!--<div class="col-lg-4 col-sm-6">-->
+                    <!--<a href="#" class="portfolio-box">-->
+                        <!--<img src="img/portfolio/1.jpg" class="img-responsive" alt="">-->
+                        <!--<div class="portfolio-box-caption">-->
+                            <!--<div class="portfolio-box-caption-content">-->
+                                <!--<div class="project-category text-faded">-->
+                                    <!--Category-->
+                                <!--</div>-->
+                                <!--<div class="project-name">-->
+                                    <!--Project Name-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</a>-->
+                <!--</div>-->
+                <!--<div class="col-lg-4 col-sm-6">-->
+                    <!--<a href="#" class="portfolio-box">-->
+                        <!--<img src="img/portfolio/2.jpg" class="img-responsive" alt="">-->
+                        <!--<div class="portfolio-box-caption">-->
+                            <!--<div class="portfolio-box-caption-content">-->
+                                <!--<div class="project-category text-faded">-->
+                                    <!--Category-->
+                                <!--</div>-->
+                                <!--<div class="project-name">-->
+                                    <!--Project Name-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</a>-->
+                <!--</div>-->
+                <!--<div class="col-lg-4 col-sm-6">-->
+                    <!--<a href="#" class="portfolio-box">-->
+                        <!--<img src="img/portfolio/3.jpg" class="img-responsive" alt="">-->
+                        <!--<div class="portfolio-box-caption">-->
+                            <!--<div class="portfolio-box-caption-content">-->
+                                <!--<div class="project-category text-faded">-->
+                                    <!--Category-->
+                                <!--</div>-->
+                                <!--<div class="project-name">-->
+                                    <!--Project Name-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</a>-->
+                <!--</div>-->
+                <!--<div class="col-lg-4 col-sm-6">-->
+                    <!--<a href="#" class="portfolio-box">-->
+                        <!--<img src="img/portfolio/4.jpg" class="img-responsive" alt="">-->
+                        <!--<div class="portfolio-box-caption">-->
+                            <!--<div class="portfolio-box-caption-content">-->
+                                <!--<div class="project-category text-faded">-->
+                                    <!--Category-->
+                                <!--</div>-->
+                                <!--<div class="project-name">-->
+                                    <!--Project Name-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</a>-->
+                <!--</div>-->
+                <!--<div class="col-lg-4 col-sm-6">-->
+                    <!--<a href="#" class="portfolio-box">-->
+                        <!--<img src="img/portfolio/5.jpg" class="img-responsive" alt="">-->
+                        <!--<div class="portfolio-box-caption">-->
+                            <!--<div class="portfolio-box-caption-content">-->
+                                <!--<div class="project-category text-faded">-->
+                                    <!--Category-->
+                                <!--</div>-->
+                                <!--<div class="project-name">-->
+                                    <!--Project Name-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</a>-->
+                <!--</div>-->
+                <!--<div class="col-lg-4 col-sm-6">-->
+                    <!--<a href="#" class="portfolio-box">-->
+                        <!--<img src="img/portfolio/6.jpg" class="img-responsive" alt="">-->
+                        <!--<div class="portfolio-box-caption">-->
+                            <!--<div class="portfolio-box-caption-content">-->
+                                <!--<div class="project-category text-faded">-->
+                                    <!--Category-->
+                                <!--</div>-->
+                                <!--<div class="project-name">-->
+                                    <!--Project Name-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</a>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</section>-->
 
     <aside class="bg-dark">
         <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
-            </div>
+            <!--<div class="call-to-action">-->
+                <!--<h2>Free Download at Start Bootstrap!</h2>-->
+                <!--<a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>-->
+            <!--</div>-->
         </div>
     </aside>
 
@@ -250,15 +249,19 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Always happy to hear from you</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>123-456-6789</p>
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-github fa-3x wow bounceIn"></i>
+                    <p><a href="https://github.com/moreflavio">moreflavio</a></p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-linkedin fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <p><a href="https://www.linkedin.com/in/flaviomm">flaviomm</a></p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:faio16@gmail.com">faio16@gmail.com</a></p>
                 </div>
             </div>
         </div>
