--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-github fa-3x wow bounceIn"></i>
-                    <p><a href="https://github.com/moreflavio">moreflavio</a></p>
+                    <p><a href="https://github.com/flaviorocks">flaviorocks</a></p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-linkedin fa-3x wow bounceIn" data-wow-delay=".1s"></i>
