Added Pixels Camp Hub Project

--- a/index.html
+++ b/index.html
@@ -137,24 +137,24 @@
         </div>
     </section>
 
-    <!--<section class="no-padding" id="portfolio">-->
-        <!--<div class="container-fluid">-->
-            <!--<div class="row no-gutter">-->
-                <!--<div class="col-lg-4 col-sm-6">-->
-                    <!--<a href="#" class="portfolio-box">-->
-                        <!--<img src="img/portfolio/1.jpg" class="img-responsive" alt="">-->
-                        <!--<div class="portfolio-box-caption">-->
-                            <!--<div class="portfolio-box-caption-content">-->
-                                <!--<div class="project-category text-faded">-->
-                                    <!--Category-->
-                                <!--</div>-->
-                                <!--<div class="project-name">-->
-                                    <!--Project Name-->
-                                <!--</div>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</a>-->
-                <!--</div>-->
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter">
+                <div class="col-lg-4 col-lg-offset-4 col-sm-6 col-sm-offset-3">
+                    <a href="pixels-projects" class="portfolio-box">
+                        <img src="img/portfolio/pixelscamp-1000x641.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Website
+                                </div>
+                                <div class="project-name">
+                                    Pixels Camp Hub
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
                 <!--<div class="col-lg-4 col-sm-6">-->
                     <!--<a href="#" class="portfolio-box">-->
                         <!--<img src="img/portfolio/2.jpg" class="img-responsive" alt="">-->
@@ -230,9 +230,9 @@
                         <!--</div>-->
                     <!--</a>-->
                 <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</section>-->
+            </div>
+        </div>
+    </section>
 
     <aside class="bg-dark">
         <div class="container text-center">
